--- a/.github/workflows/main_simpleai.yml
+++ b/.github/workflows/main_simpleai.yml
@@ -31,7 +31,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: .net-app
-          path: ${{env.DOTNET_ROOT}}/myapp
+          path: /ZCode/Simpleaichatbotweb
 
   deploy:
     runs-on: windows-latest
@@ -61,4 +61,5 @@ jobs:
         with:
           app-name: 'simplerulewebapp'
           slot-name: 'Production'
-          package: ${{env.DOTNET_ROOT}}/myapp
+          package: /ZCode/Simpleaichatbotweb
+
