--- a/SimpleBlazor/SimpleBlazor.csproj
+++ b/SimpleBlazor/SimpleBlazor.csproj
@@ -4,6 +4,10 @@
     <ProjectReference Include="..\SimpleLogic\SimpleLogic.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="DotNetEnv" Version="3.1.1" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
