--- a/.github/workflows/main_simpleai.yml
+++ b/.github/workflows/main_simpleai.yml
@@ -25,13 +25,13 @@ jobs:
         run: dotnet build --configuration Release
 
       - name: dotnet publish
-        run: dotnet publish -c Release -o "${{env.DOTNET_ROOT}}/myapp"
+        run: dotnet publish -c Release -o /Users/opitz/ZCode/SimpleAiChatbotWeb/.env
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: .net-app
-          path: /ZCode/Simpleaichatbotweb
+          path: /Users/opitz/ZCode/SimpleAiChatbotWeb/.env
 
   deploy:
     runs-on: windows-latest
@@ -61,5 +61,6 @@ jobs:
         with:
           app-name: 'simplerulewebapp'
           slot-name: 'Production'
-          package: /ZCode/Simpleaichatbotweb
+          package: /Users/opitz/ZCode/SimpleAiChatbotWeb/.env
+          
 
