--- a/.github/workflows/main_simpleai.yml
+++ b/.github/workflows/main_simpleai.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
-          name: .net-app
+          name: .SimpleAiChatbotWeb
           path: /Users/opitz/ZCode/SimpleAiChatbotWeb/.env
 
   deploy:
@@ -46,7 +46,7 @@ jobs:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
-          name: .net-app
+          name: .SimpleAiChatbotWeb
       
       - name: Login to Azure
         uses: azure/login@v2
