--- a/.github/workflows/main_simpleai.yml
+++ b/.github/workflows/main_simpleai.yml
@@ -1,38 +1,29 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
-
-name: Build and deploy ASP.Net Core app to Azure Web App - simplerulewebapp
-
+name: Build and deploy ASP.Net Core app to Azure Web App - simpleai
 on:
   push:
     branches:
       - main
   workflow_dispatch:
-
 jobs:
   build:
     runs-on: windows-latest
-
     steps:
       - uses: actions/checkout@v4
-
       - name: Set up .NET Core
         uses: actions/setup-dotnet@v4
         with:
           dotnet-version: '8.x'
-
       - name: Build with dotnet
         run: dotnet build --configuration Release
-
       - name: dotnet publish
-        run: dotnet publish -c Release -o /Users/opitz/ZCode/SimpleAiChatbotWeb/.env
-
+        run: dotnet publish -c Release -o "${{env.DOTNET_ROOT}}/myapp"
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
-          name: .SimpleAiChatbotWeb
-          path: /Users/opitz/ZCode/SimpleAiChatbotWeb/.env
-
+          name: .net-app
+          path: ${{env.DOTNET_ROOT}}/myapp
   deploy:
     runs-on: windows-latest
     needs: build
@@ -40,13 +31,12 @@ jobs:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     permissions:
-      id-token: write # Required for requesting the JWT
-
+      id-token: write #This is required for requesting the JWT
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
-          name: .SimpleAiChatbotWeb
+          name: .net-app
       
       - name: Login to Azure
         uses: azure/login@v2
@@ -54,13 +44,13 @@ jobs:
           client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID }}
           tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID }}
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID }}
-
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
-          app-name: 'simplerulewebapp'
+          app-name: 'simpleai'
           slot-name: 'Production'
-          package: /Users/opitz/ZCode/SimpleAiChatbotWeb/.env
+          package: .
+          
           
 
