--- a/.github/workflows/main_simpleai.yml
+++ b/.github/workflows/main_simpleai.yml
@@ -1,11 +1,11 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
 name: Build and deploy ASP.Net Core app to Azure Web App - simpleai
+
 on:
   push:
     branches:
       - main
   workflow_dispatch:
+
 jobs:
   build:
     runs-on: windows-latest
@@ -18,12 +18,13 @@ jobs:
       - name: Build with dotnet
         run: dotnet build --configuration Release
       - name: dotnet publish
-        run: dotnet publish -c Release -o "${{env.DOTNET_ROOT}}/myapp"
+        run: dotnet publish -c Release -o ./output
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
-          name: .Simpleaichatbotweb
-          path: /ZCode/
+          name: Simpleaichatbotweb
+          path: ./output
+
   deploy:
     runs-on: windows-latest
     needs: build
@@ -31,12 +32,12 @@ jobs:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     permissions:
-      id-token: write #This is required for requesting the JWT
+      id-token: write
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
-          name: .Simpleaichatbotweb
+          name: Simpleaichatbotweb
       
       - name: Login to Azure
         uses: azure/login@v2
@@ -44,13 +45,14 @@ jobs:
           client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID }}
           tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID }}
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID }}
+      
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
           app-name: 'simpleai'
           slot-name: 'Production'
-          package: .
-          
+          package: ${{ github.workspace }}/Simpleaichatbotweb
+
           
 
