--- a/.github/workflows/main_simpleai.yml
+++ b/.github/workflows/main_simpleai.yml
@@ -56,4 +56,4 @@ jobs:
         with:
           app-name: 'simpleai'
           slot-name: 'Production'
-          package: './Simpleaichatbotweb'  # Adjust if necessary to point to your artifact folder
+          package: './SimpleAiChatBotWeb'  # Adjust if necessary to point to your artifact folder
