--- a/.github/workflows/main_simpleai.yml
+++ b/.github/workflows/main_simpleai.yml
@@ -9,6 +9,8 @@ on:
 jobs:
   build-and-deploy:
     runs-on: windows-latest
+    permissions:
+      id-token: write
     steps:
       # Checkout the code from the repository
       - name: Checkout code
