--- a/.github/workflows/main_simpleai.yml
+++ b/.github/workflows/main_simpleai.yml
@@ -1,7 +1,4 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
-name: Build and deploy ASP.Net Core app to Azure Web App - simpleai
+name: Build and deploy SimpleRuleAiChatBotWeb to Azure
 
 on:
   push:
@@ -10,44 +7,31 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  build-and-deploy:
     runs-on: windows-latest
-
+    permissions:
+      id-token: write
     steps:
-      - uses: actions/checkout@v4
-
+      # Checkout the code from the repository
+      - name: Checkout code
+        uses: actions/checkout@v4
+      
+      # Set up .NET Core SDK
       - name: Set up .NET Core
         uses: actions/setup-dotnet@v4
         with:
           dotnet-version: '8.x'
-
-      - name: Build with dotnet
-        run: dotnet build --configuration Release
-
-      - name: dotnet publish
-        run: dotnet publish -c Release -o "${{env.DOTNET_ROOT}}/myapp"
-
-      - name: Upload artifact for deployment job
-        uses: actions/upload-artifact@v4
-        with:
-          name: .net-app
-          path: ${{env.DOTNET_ROOT}}/myapp
-
-  deploy:
-    runs-on: windows-latest
-    needs: build
-    environment:
-      name: 'Production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-    permissions:
-      id-token: write #This is required for requesting the JWT
-
-    steps:
-      - name: Download artifact from build job
-        uses: actions/download-artifact@v4
-        with:
-          name: .net-app
       
+      # Build the project using dotnet
+      - name: Run Tests
+        run: dotnet test --configuration Release
+      
+      # Publish the application to a specified folder
+      - name: dotnet publish
+        working-directory: ./SimpleBlazor
+        run: dotnet publish -c Release -o ./output
+
+      # Login to Azure using the credentials stored in GitHub Secrets
       - name: Login to Azure
         uses: azure/login@v2
         with:
@@ -55,11 +39,11 @@ jobs:
           tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_92BA949D42DD44C89D3FD2116EF626B4 }}
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_80F14AC55F4D4EC1B39F1B3CAA3C0F04 }}
 
+      # Deploy the app to Azure Web App using the Azure Web Apps Deploy action
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
           app-name: 'simpleai'
           slot-name: 'Production'
-          package: .
-          
+          package: './output' 
