--- a/.github/workflows/main_simpleai.yml
+++ b/.github/workflows/main_simpleai.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          creds: ${{ secrets.PUBLISH_SECRETS_2 }}
+          publish-profile: ${{ secrets.PUBLISH_SECRETS_2 }}
           
       # Checkout the code from the repository
       - name: Checkout code
