ChatGPT_added_Complete_Azure_Secrets.yml

--- a/.github/workflows/main_simpleai.yml
+++ b/.github/workflows/main_simpleai.yml
@@ -12,8 +12,8 @@ jobs:
     permissions:
       id-token: write
     steps:
-      # Login to Azure using publish profile
-      - name: Login to Azure Web App
+      # Login to Azure using Service Principal credentials
+      - name: Login to Azure
         uses: azure/login@v1
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
@@ -37,11 +37,10 @@ jobs:
         working-directory: ./SimpleBlazor
         run: dotnet publish -c Release -o ./output
         
-      # Deploy the app to Azure Web App using the Azure Web Apps Deploy action
+      # Deploy the app to Azure Web App
       - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v3
         with:
-          publish-profile: ${{ secrets.PUBLISH_PROFILE }}
           app-name: 'simpleai'
           slot-name: 'Production'
           package: './output'
